Added Quick sort iterative-randomized

--- a/sorting.ipynb
+++ b/sorting.ipynb
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 1,
    "id": "bdb9542d-25ac-4be6-b7cf-aaa9af56fe0c",
    "metadata": {},
    "outputs": [],
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 2,
    "id": "828b0e85-deef-45cb-aa46-5d19f20f8336",
    "metadata": {},
    "outputs": [
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 5,
    "id": "6fb65f0e-050e-421a-95dd-f3f2d3aab10e",
    "metadata": {},
    "outputs": [
@@ -499,8 +499,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[12, 45, 25, 68, 36, 35]\n",
-      "[12, 25, 35, 36, 45, 68]\n"
+      "[1, 100, 10, 27, 94, 83]\n",
+      "[1, 10, 27, 83, 94, 100]\n"
      ]
     }
    ],
@@ -521,15 +521,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "719e35f2-6e06-4b7a-9db2-09f86da6665a",
+   "id": "5042a2af-d649-42ea-8be1-0d8540e20796",
    "metadata": {},
    "source": [
-    "# 4.2.1 Iterative Quick Sort (randomized)"
+    "# 4.2.2 Iterative Quick Sort (randomized)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e2625410-78a7-4ed3-9fb8-b0b7a63c5f84",
+   "id": "81c706ef-e1b6-4fe4-9fd9-112affe013ca",
    "metadata": {},
    "source": [
     "Here, we will implement the randomized iterative version of quicksort"
@@ -537,11 +537,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9642474a-1fd5-423c-9099-038da182fb78",
+   "execution_count": 12,
+   "id": "959f9751-9554-4c52-a08e-8ea0ef8b2bd6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import random\n",
+    "\n",
+    "def itr_qs(x):\n",
+    "    \"\"\"\n",
+    "    Quick sort iterative implementation randomized version\n",
+    "    \"\"\"\n",
+    "    def qs(a,l,r):\n",
+    "        \"\"\"\n",
+    "        This sub-function will do the partitioning to arrange the elements in the following order:\n",
+    "        <= pivot | pivot | > pivot\n",
+    "        \"\"\"\n",
+    "        pivot = random.randint(l,r)    ## Choosing a pivot at random\n",
+    "        a[pivot], a[r] = a[r], a[pivot]   ## Switching the pivot element with the last element of the array\n",
+    "        pivot = r   ## Making the last element pivot \n",
+    "        yellow = l-1\n",
+    "        \n",
+    "        for green in range(l,r):     ## Looping till r-1 only because we know that the pivot element is at the last\n",
+    "            if a[green] < a[pivot]:\n",
+    "                a[yellow+1], a[green] = a[green], a[yellow+1]\n",
+    "                yellow += 1\n",
+    "        \n",
+    "        ## Now, swapping the pivot element with the yellow+1 position\n",
+    "        a[yellow+1], a[r] = a[r], a[yellow+1]\n",
+    "        return yellow+1\n",
+    "\n",
+    "    stack = [(0, len(x)-1)]\n",
+    "\n",
+    "    while stack:\n",
+    "        low, high = stack.pop()\n",
+    "        if low < high:\n",
+    "            pivot = qs(x,low,high)\n",
+    "            stack.append((low, pivot-1))\n",
+    "            stack.append((pivot+1, high))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b4b655b-d439-4c5f-a3b0-34bca087e53b",
+   "metadata": {},
+   "source": [
+    "Checking the working of the above algorithm through examples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "1644a599-db82-463a-9dee-383d6cae7f03",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 1, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1,1,1,0]\n",
+    "itr_qs(a)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "96b546f3-17eb-4d02-89e9-cfca170755ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[93, 3, 24, 8, 97, 81]\n",
+      "[3, 8, 24, 81, 93, 97]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [random.randint(0,100) for i in range(6)]\n",
+    "print(a)\n",
+    "itr_qs(a)\n",
+    "print(a)"
+   ]
   },
   {
    "cell_type": "code",
@@ -554,31 +638,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "afcbdfd7-9458-45eb-ad2c-20970d9a8ba2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "34ebbff3-8786-4579-be3d-9221e8ff024e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "df23e409-d26c-4702-890a-ea8b3345e626",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "22c9cab1-2760-449a-b849-c15b77376395",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1a6fdb9b-0ca9-4be3-ab82-7e5cb08a1c1c",
    "metadata": {},
    "outputs": [],
    "source": []
