Added bubble sort algo

--- a/sorting.ipynb
+++ b/sorting.ipynb
@@ -636,20 +636,67 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "22c9cab1-2760-449a-b849-c15b77376395",
+   "cell_type": "markdown",
+   "id": "42761070-8c87-47cd-9294-900badf0b280",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# 5.0 Bubble Sort"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fbd57d73-1474-4f6d-b154-64696dae6c0b",
+   "metadata": {},
+   "source": [
+    "Here, we will implement bubble sort. It has time complexity of O(n2)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1a6fdb9b-0ca9-4be3-ab82-7e5cb08a1c1c",
+   "execution_count": 21,
+   "id": "d0e302a1-bbcb-43e6-8b17-25bbc286b37a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def bubble_sort(x):\n",
+    "    \"\"\"\n",
+    "    Sort an array x using the bubble sort algorithm\n",
+    "    \"\"\"\n",
+    "    for i in range(len(x)):\n",
+    "        for j in range(len(x)-1-i):\n",
+    "            if x[j] > x[j+1]:\n",
+    "                x[j], x[j+1] = x[j+1], x[j]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9fab0217-d166-49d8-a9a9-5a9fc9146388",
+   "metadata": {},
+   "source": [
+    "Checking the working of the above algorithm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "041ab791-89b8-403f-adbb-ea683bb27da8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[21, 68, 89, 88, 26, 85]\n",
+      "[21, 26, 68, 85, 88, 89]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [random.randint(0,100) for i in range(6)]\n",
+    "print(a)\n",
+    "bubble_sort(a)\n",
+    "print(a)"
+   ]
   }
  ],
  "metadata": {
