--- a/n_queens.ipynb
+++ b/n_queens.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "9dbdf15e-0b0c-42b3-a4b7-2d4c20ef7c9c",
+   "execution_count": 93,
+   "id": "2a2d1680-1d56-494f-a565-7cf8d825a461",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,6 +40,7 @@
     "        \"\"\"\n",
     "        n = len(board[\"queens\"].keys())\n",
     "        for i in range(n):\n",
+    "            print(\"|\", end=\"\")\n",
     "            for j in range(n):\n",
     "                print(\"|\", end=\"\")\n",
     "                if board[\"queens\"][i] == j:\n",
@@ -47,7 +48,8 @@
     "                else:\n",
     "                    print(\" \", end=\"\")\n",
     "                print(\"|\", end=\"\")\n",
-    "            print()\n",
+    "            print(\"|\")\n",
+    "        print()\n",
     "\n",
     "    board = initialize_board(int(n))\n",
     "\n",
@@ -63,9 +65,10 @@
     "        \"\"\"\n",
     "        board[\"queens\"][i] = j\n",
     "        board[\"row\"][i] = 1\n",
-    "        board[\"col\"][i] = 1\n",
+    "        board[\"col\"][j] = 1\n",
     "        board[\"nw_se\"][i-j] = 1\n",
     "        board[\"ne_sw\"][i+j] = 1\n",
+    "        # print_board(board)\n",
     "\n",
     "    def undo_queen(board, i, j):\n",
     "        \"\"\"\n",
@@ -73,7 +76,7 @@
     "        \"\"\"\n",
     "        board[\"queens\"][i] = -1\n",
     "        board[\"row\"][i] = 0\n",
-    "        board[\"col\"][i] = 0\n",
+    "        board[\"col\"][j] = 0\n",
     "        board[\"nw_se\"][i-j] = 0\n",
     "        board[\"ne_sw\"][i+j] = 0\n",
     "\n",
@@ -88,22 +91,21 @@
     "                board[\"queens\"][i] = j\n",
     "                update_board(board,i,j)\n",
     "                if i == n-1:\n",
-    "                    return True\n",
-    "                else:\n",
-    "                    next = place_queens(i+1, board)\n",
-    "                if next == False:\n",
+    "                    print_board(board)\n",
+    "                    undo_queen(board, i, j)\n",
+    "                    continue\n",
+    "                if ~place_queens(i+1, board):\n",
     "                    undo_queen(board, i, j)\n",
     "        else:\n",
     "            return False\n",
     "        \n",
-    "    place_queens(0, board)\n",
-    "    print_board(board)"
+    "    place_queens(0, board)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "33ea1608-effe-444f-9a2e-b602c5a830ec",
+   "execution_count": 94,
+   "id": "f5b62392-b190-4d86-a5de-f61e7ab7de3d",
    "metadata": {},
    "outputs": [
     {
@@ -117,10 +119,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "| || || || |\n",
-      "| || || || |\n",
-      "| || || ||Q|\n",
-      "| || || ||Q|\n"
+      "|| ||Q|| || ||\n",
+      "|| || || ||Q||\n",
+      "||Q|| || || ||\n",
+      "|| || ||Q|| ||\n",
+      "\n",
+      "|| || ||Q|| ||\n",
+      "||Q|| || || ||\n",
+      "|| || || ||Q||\n",
+      "|| ||Q|| || ||\n",
+      "\n"
      ]
     }
    ],
@@ -129,28 +137,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "16f2ec3f-e808-476f-b213-67558236f569",
+   "cell_type": "markdown",
+   "id": "dc4c259a-063a-4722-a6a3-43b49d4bbcec",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bf951a71-8067-47eb-8dc2-7aeac96c13a2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d51a26bb-3292-4761-aab3-fb12ce93c6c5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "The n_queens algorithm is an example of Depth First Search!!"
+   ]
   }
  ],
  "metadata": {
